<resources>
    <string name="app_name">iMarket-Student-Edition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logout">search</string>
    <string name="location">Location: </string>
    <string name="_123_example_com">123@example.com</string>
    <string name="email">Email: </string>
    <string name="name">Name: </string>
    <string name="password">Password: </string>
    <string name="current_location">current location</string>
    <string name="full_name">full name</string>
    <string name="at_least_8_char">at least 8 char</string>
    <string name="hi">Hi, </string>
    <string name="user_name">User Name</string>
    <string name="your_products">Your Products</string>
    <string name="update">update</string>
    <string name="save">save</string>
    <string name="seller_name">seller name</string>
    <string name="seller_phone">seller phone</string>
    <string name="add_product">Add Product</string>
    <string name="contact_info">Contact Info</string>
    <string name="product_info">Product Info</string>
    <string name="price">Price:</string>
    <string name="condition_hint">condition</string>
    <string name="product_name">product name</string>
    <string name="number">Number:</string>
    <string name="cad"> amount in $</string>
    <string name="condition">condition</string>
    <string name="image_desc">image_desc</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="backimagebutton">BackImageButton</string>
    <string name="available_products">Available Products</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="new_to_iMarket">New to iMarket? Register here.</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="EMAIL">EMAIL</string>
    <string name="password_hint">********</string>
    <string name="email_hint">hello@welcome.com</string>
    <string name="open_new_link">open_new_link</string>
    <string name="create_new_account">Create new account</string>
    <string name="NAME">NAME</string>
    <string name="name_hint">John Smith</string>
    <string name="already_registered">Already Registered? Log in here.</string>
    <string name="register">register</string>
    <string name="update_delete">Update/Delete</string>
    <string name="description">Description:</string>
    <string name="product_page">Product Page</string>
    <string name="textview">TextView</string>
    <string name="address">address</string>
    <string name="date_created">Date Created</string>

</resources>