<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UserActivity">

    <EditText
        android:id="@id/editTextTextPersonName9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/_123_example_com"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName8"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="18dp"
        android:text="@string/location"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName10"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName9"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName9" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName7"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName7" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName9"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName8" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/current_location"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName9"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"
        app:layout_constraintStart_toStartOf="@+id/textView12" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/at_least_8_char"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName7"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:text="@string/hi"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="35dp"
        android:text="@string/user_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="25dp"
        android:text="@string/your_products"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName10" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/teal_700"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/bottom_nav_bar" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_nav"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/update" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>