<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/p_recycleview"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="78dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="19dp"
        android:text="@string/your_products"
        android:textColor="@color/teal_700"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/p_date_created" />

    <EditText
        android:id="@+id/puser_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/p_user_password"
        app:layout_constraintTop_toTopOf="@+id/up_profile"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/p_user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/at_least_8_char"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/puser_name"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/p_user_password"
        app:layout_constraintStart_toStartOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="82dp"
        android:text="@string/name"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/p_user_password"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="12dp"
        android:text="@string/date_created"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/p_date_created"
        app:layout_constraintEnd_toStartOf="@+id/p_date_created" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="39dp"
        android:text="@string/email"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@id/p_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/_123_example_com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/p_user_password"
        app:layout_constraintTop_toBottomOf="@+id/p_user_password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/p_date_created"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/date_created"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/p_user_email"
        app:layout_constraintStart_toStartOf="@+id/p_user_email"
        app:layout_constraintTop_toBottomOf="@+id/p_user_email"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/u_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/user_name"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:text="@string/hi"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/u_name"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/up_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/image_desc"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_circle_24"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="false"
        android:gravity="fill_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/teal_700"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/bottom_nav_bar" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>